; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openbsm/bin/auditd/extr_audit_warn.c_auditwarnlog.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openbsm/bin/auditd/extr_audit_warn.c_auditwarnlog.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AUDITWARN_SCRIPT = common dso_local global i8* null, align 8
@LOG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Could not exec %s (%m)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @auditwarnlog to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @auditwarnlog(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca [9 x i8*], align 16
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8** %0, i8*** %3, align 8
  %7 = load i8*, i8** @AUDITWARN_SCRIPT, align 8
  %8 = getelementptr inbounds [9 x i8*], [9 x i8*]* %4, i64 0, i64 0
  store i8* %7, i8** %8, align 16
  store i32 0, i32* %6, align 4
  br label %9

9:                                                ; preds = %31, %1
  %10 = load i8**, i8*** %3, align 8
  %11 = load i32, i32* %6, align 4
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i8*, i8** %10, i64 %12
  %14 = load i8*, i8** %13, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %16, label %19

16:                                               ; preds = %9
  %17 = load i32, i32* %6, align 4
  %18 = icmp slt i32 %17, 8
  br label %19

19:                                               ; preds = %16, %9
  %20 = phi i1 [ false, %9 ], [ %18, %16 ]
  br i1 %20, label %21, label %34

21:                                               ; preds = %19
  %22 = load i8**, i8*** %3, align 8
  %23 = load i32, i32* %6, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i8*, i8** %22, i64 %24
  %26 = load i8*, i8** %25, align 8
  %27 = load i32, i32* %6, align 4
  %28 = add nsw i32 %27, 1
  %29 = sext i32 %28 to i64
  %30 = getelementptr inbounds [9 x i8*], [9 x i8*]* %4, i64 0, i64 %29
  store i8* %26, i8** %30, align 8
  br label %31

31:                                               ; preds = %21
  %32 = load i32, i32* %6, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %6, align 4
  br label %9

34:                                               ; preds = %19
  %35 = load i32, i32* %6, align 4
  %36 = add nsw i32 %35, 1
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds [9 x i8*], [9 x i8*]* %4, i64 0, i64 %37
  store i8* null, i8** %38, align 8
  %39 = call i32 (...) @fork()
  store i32 %39, i32* %5, align 4
  %40 = load i32, i32* %5, align 4
  %41 = icmp eq i32 %40, -1
  br i1 %41, label %42, label %43

42:                                               ; preds = %34
  store i32 -1, i32* %2, align 4
  br label %55

43:                                               ; preds = %34
  %44 = load i32, i32* %5, align 4
  %45 = icmp eq i32 %44, 0
  br i1 %45, label %46, label %54

46:                                               ; preds = %43
  %47 = load i8*, i8** @AUDITWARN_SCRIPT, align 8
  %48 = getelementptr inbounds [9 x i8*], [9 x i8*]* %4, i64 0, i64 0
  %49 = call i32 @execv(i8* %47, i8** %48)
  %50 = load i32, i32* @LOG_ERR, align 4
  %51 = load i8*, i8** @AUDITWARN_SCRIPT, align 8
  %52 = call i32 @syslog(i32 %50, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8* %51)
  %53 = call i32 @exit(i32 1) #3
  unreachable

54:                                               ; preds = %43
  store i32 0, i32* %2, align 4
  br label %55

55:                                               ; preds = %54, %42
  %56 = load i32, i32* %2, align 4
  ret i32 %56
}

declare dso_local i32 @fork(...) #1

declare dso_local i32 @execv(i8*, i8**) #1

declare dso_local i32 @syslog(i32, i8*, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
